changes: fixed wrap padding, moved some code

--- a/src/styles/blocks/Authorization.scss
+++ b/src/styles/blocks/Authorization.scss
@@ -23,9 +23,14 @@
     align-items: center;
     width: 100%;
 
+    @media (min-width: $point1) {
+        padding: 0 2rem;
+    }
+    @media (min-width: $point3) and (max-width: $point2) {
+        padding-left: 2rem;
+    }
     @media (min-width: $point3) {
         max-width: 54.4rem;
-        padding-left: 2rem;
     }
 
     svg {
@@ -99,11 +104,11 @@
         @media (min-width: $point1) {
             font-size: 6.4rem;
         }
-        @media (min-width: $point3) {
-            margin-bottom: 1rem;
-        }
         @media (min-width: $point3) and (max-width: $point2) {
             font-size: 4rem;
+        }
+        @media (min-width: $point3) {
+            margin-bottom: 1rem;
         }
     }
 
@@ -118,7 +123,7 @@
 
 .register__form {
     @media (min-width: $point1) {
-        max-width: 49.9rem;
+        max-width: 47.9rem;
     }
     @media (max-width: $point4) {
         min-height: 60rem;
